# opentelemetry-application-insights

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.tpl
.github/workflows/: ci.yml
docs/: releasing.md
examples/: attributes.rs  http_client_isahc.rs  http_client_reqwest.rs  http_client_reqwest_blocking.rs  http_client_surf.rs  http_clients.rs  live_metrics.rs  logs.rs  logs_pipeline.rs  metrics.rs  opentelemetry.rs  stress.rs  stress_test.rs  tracing.rs
examples/tracing/: Cargo.toml  README.md
examples/tracing/src/: main.rs
src/: connection_string.rs  convert.rs  error.rs  exporter.rs  http_client.rs  lib.rs  logs.rs  metrics.rs  pipeline.rs  quick_pulse.rs  tags.rs  trace.rs  uploader.rs  uploader_quick_pulse.rs
src/contracts/: availabilitydata.rs  contexttagkeys.rs  data.rs  datapoint.rs  datapointtype.rs  domain.rs  eventdata.rs  exceptiondata.rs  exceptiondetails.rs  message_data.rs  messagedata.rs  metricdata.rs  mod.rs  pageviewdata.rs  remotedependencydata.rs  requestdata.rs  severitylevel.rs  stackframe.rs
src/models/: base.rs  context_tag_keys.rs  data.rs  data_point.rs  envelope.rs  event_data.rs  exception_data.rs  exception_details.rs  message_data.rs  metric_data.rs  mod.rs  ms_link.rs  quick_pulse.rs  remote_dependency_data.rs  request_data.rs  sanitize.rs  severity_level.rs
tests/: http_requests.rs  version_numbers.rs
tests/snapshots/: http_requests__http_requests.snap  http_requests__live_metrics.snap  http_requests__logs.snap  http_requests__logs_with_resource_attributes_in_events.snap  http_requests__logs_with_resource_attributes_in_events_and_logs.snap  http_requests__traces.snap  http_requests__traces_batch_async_std.snap  http_requests__traces_batch_tokio.snap  http_requests__traces_simple.snap  http_requests__traces_with_resource_attributes_in_events.snap  http_requests__traces_with_resource_attributes_in_events_and_logs.snap
