[package]
name = "opentelemetry-application-insights"
version = "0.33.0"
authors = ["Jan Kuehle <jkuehle90@gmail.com>"]
edition = "2018"
description = "OpenTelemetry exporter for Azure Application Insights"
readme = "README.md"
repository = "https://github.com/frigus02/opentelemetry-application-insights"
license = "MIT"
keywords = ["opentelemetry", "tracing"]
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
exclude = [
    ".github/*",
    "README.tpl",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
reqwest-blocking-client = ["reqwest-client"]
reqwest-blocking-client-rustls = ["reqwest-client-rustls"]
reqwest-client = ["opentelemetry-http/reqwest", "reqwest/native-tls"]
reqwest-client-vendored-tls = ["opentelemetry-http/reqwest", "reqwest/native-tls-vendored"]
reqwest-client-rustls = ["opentelemetry-http/reqwest", "reqwest/rustls-tls"]
metrics = ["opentelemetry_sdk/metrics"]
logs = ["opentelemetry_sdk/logs"]
live-metrics = ["futures-util", "sysinfo"]

[dependencies]
async-trait = "0.1"
bytes = "1"
chrono = "0.4"
flate2 = "1"
http = "0.2"
once_cell = "1"
futures-util = { version = "0.3", default-features = false, optional = true }
opentelemetry = "0.23"
opentelemetry_sdk = "0.23"
opentelemetry-http = "0.12"
opentelemetry-semantic-conventions = "0.15"
reqwest = { version = ">=0.11", default-features = false, features = ["blocking"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
thiserror = "1"
sysinfo = { version = "0.30", optional = true }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
doc-comment = "0.3.3"
env_logger = "0.11.3"
insta = "1.39.0"
isahc = "1.7.2"
log = { version = "0.4", features = ["kv", "kv_sval"] }
opentelemetry_sdk = { version = "0.23", features = ["rt-async-std", "rt-tokio", "rt-tokio-current-thread", "logs_level_enabled"] }
opentelemetry-http = { version = "0.12", features = ["reqwest"] }
opentelemetry-appender-log = { version = "0.4", features = ["with-serde"] }
opentelemetry-application-insights = { path = ".", features = ["logs", "live-metrics"] }
rand = "0.8.5"
regex = "1.10.5"
reqwest = { version = ">=0.11", features = ["blocking"] }
test-case = "3.3.1"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "process", "time"] }
version-sync = { version = "0.9.5", default-features = false, features = ["html_root_url_updated", "contains_regex"] }

[badges]
github = { repository = "frigus02/opentelemetry-application-insights", workflow = "CI" }

[[example]]
name = "attributes"
required-features = ["opentelemetry-http/reqwest"]

[[example]]
name = "http_client_isahc"
required-features = ["opentelemetry_sdk/rt-async-std", "opentelemetry-http/isahc"]

[[example]]
name = "http_client_reqwest"
required-features = ["opentelemetry_sdk/rt-tokio", "opentelemetry-http/reqwest"]

[[example]]
name = "http_client_reqwest_blocking"
required-features = ["opentelemetry-http/reqwest"]

[[example]]
name = "live_metrics"
required-features = ["live-metrics", "opentelemetry_sdk/rt-tokio", "opentelemetry-http/reqwest"]

[[example]]
name = "logs"
required-features = ["logs", "opentelemetry_sdk/rt-tokio"]

[[example]]
name = "metrics"
required-features = ["metrics", "opentelemetry_sdk/rt-tokio"]

[[example]]
name = "opentelemetry"
required-features = ["opentelemetry_sdk/rt-tokio", "opentelemetry-http/reqwest"]

[[example]]
name = "stress_test"
required-features = ["opentelemetry_sdk/rt-tokio", "opentelemetry-http/reqwest"]
