[package]
name = "tracing"
version = "0.1.0"
authors = ["Jan Kuehle <jkuehle90@gmail.com>"]
edition = "2018"

[dependencies]
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry-http = { version = "0.9.0", features = ["reqwest"] }
opentelemetry-application-insights = { version = "0.27.0" }
reqwest = "0.11"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "process", "time"] }
tracing = "0.1.37"
tracing-attributes = "0.1.26"
tracing-futures = "0.2.5"
tracing-opentelemetry = "0.20.0"
tracing-subscriber = "0.3.17"
