[package]
name = "tracing"
version = "0.1.0"
authors = ["Jan Kuehle <jkuehle90@gmail.com>"]
edition = "2018"

[dependencies]
opentelemetry = "0.28.0"
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio"] }
opentelemetry-http = { version = "0.28.0", features = ["reqwest"] }
opentelemetry-application-insights = { version = "0.38.0" }
reqwest = "0.12"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "process", "time"] }
tracing = "0.1.40"
tracing-attributes = "0.1.27"
tracing-futures = "0.2.5"
tracing-opentelemetry = "0.29.0"
tracing-subscriber = "0.3.18"
